--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,13 @@
 input {
   box-shadow: none !important;
 }
+.alert-success {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+.alert-success p{
+  font-size: 1.5rem;
+}
