--- a/src/components/fields/input/input.css
+++ b/src/components/fields/input/input.css
@@ -1,6 +1,8 @@
 .green {
-    border: 1px solid green !important
+    border: 1px solid green !important;
+    color: #6c757d!important;
 }
 .red {
-    border: 1px solid red !important
+    border: 1px solid red !important;
+    color: red !important;
 }
